--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!Doctype html>
+<html>
+  <head>
+    <title>Web project</title>
+  </head>
+    <body>
+      <h1>My first webpage</h1>
+    </body>
+</html>
